--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 Flask==2.2.5
 flask-cors==3.0.10
 pymongo==4.6.1
-Pillow==10.2.0
+Pillow==8.4.0       # ✅ downgraded to match stegano's requirement
 stegano==0.9.9
