--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Flask==2.2.5
 flask-cors==3.0.10
 pymongo==4.6.1
-Pillow==8.4.0       # ✅ downgraded to match stegano's requirement
+Pillow==8.4.0
 stegano==0.9.9
+certifi==2024.2.2    # ✅ Add this line
